--- a/Lesson06-Visualizer-Preferences/T06.01-Exercise-SetupTheActivity/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.01-Exercise-SetupTheActivity/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Visualize</string>
 
-    <!-- TODO (4) Add string for Settings -->
-    
+    <!-- Done (4) Add string for Settings -->
+    <string name="menu_item_settings">Settings</string>
     <!-- - - - - - - - - - - - - - - -
           - Used by Preferences  -
           - - - - - - - - - - - - - - - -->
