--- a/Lesson06-Visualizer-Preferences/T06.04-Exercise-UseResources/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.04-Exercise-UseResources/app/src/main/res/values/strings.xml
@@ -6,7 +6,13 @@
     <!-- - - - - - - - - - - - - - - -
           - Used by Preferences  -
           - - - - - - - - - - - - - - - -->
-    <!-- TODO (1) Add Strings for checkbox preference -->
+    <!-- Done (1) Add Strings for checkbox preference -->
+    <string name="pref_show_bass_label">Show bass</string>
+    <string name="pref_show_bass_key" translatable="false">show_bass</string>
+
+    <!-- Summary for checkboxes-->
+    <string name="pref_show_true">Hidden</string>
+    <string name="pref_show_false">Shown</string>
 
     <!-- Value in SharedPreferences for red color option -->
     <string name="pref_color_red_value" translatable="false">red</string>
