--- a/Lesson06-Visualizer-Preferences/T06.06-Exercise-AddTwoMoreCheckboxes/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.06-Exercise-AddTwoMoreCheckboxes/app/src/main/res/values/strings.xml
@@ -14,9 +14,9 @@
 
     <!-- Done (2) Add all of the strings for the new checkboxes -->
     <!-- Label for the show mid checkbox preference -->
-    <string name="pref_show_mid_label">Show Mid</string>
+    <string name="pref_show_mid_rage_label">Show Mid Rage</string>
     <!-- Key name for storing bass in SharedPreferences -->
-    <string name="pref_show_mid_key" translatable="false">show_mid</string>
+    <string name="pref_show_mid_rage_key" translatable="false">show_mid_rage</string>
 
     <!-- Label for the show treble checkbox preference -->
     <string name="pref_show_treble_label">Show Treble</string>
