--- a/Lesson06-Visualizer-Preferences/T06.06-Exercise-AddTwoMoreCheckboxes/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.06-Exercise-AddTwoMoreCheckboxes/app/src/main/res/values/strings.xml
@@ -13,14 +13,14 @@
     <string name="pref_show_bass_key" translatable="false">show_bass</string>
 
     <!-- Done (2) Add all of the strings for the new checkboxes -->
-    <!-- Label for the show mid checkbox preference -->
-    <string name="pref_show_mid_rage_label">Show Mid Rage</string>
-    <!-- Key name for storing bass in SharedPreferences -->
-    <string name="pref_show_mid_rage_key" translatable="false">show_mid_rage</string>
+    <!-- Label for the show mid range checkbox preference -->
+    <string name="pref_show_mid_range_label">Show Mid Range</string>
+    <!-- Key name for storing mid range in SharedPreferences -->
+    <string name="pref_show_mid_range_key" translatable="false">show_mid_range</string>
 
     <!-- Label for the show treble checkbox preference -->
     <string name="pref_show_treble_label">Show Treble</string>
-    <!-- Key name for storing bass in SharedPreferences -->
+    <!-- Key name for storing treble in SharedPreferences -->
     <string name="pref_show_treble_key" translatable="false">show_treble</string>
 
     <!-- Summary for Checkboxes -->
