--- a/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/values/strings.xml
@@ -25,9 +25,23 @@
     <string name="pref_show_true">Shown</string>
     <string name="pref_show_false">Hidden</string>
 
-    <!-- TODO (2) Add string values for the list preference -->
-    <!-- TODO (3) Add a res->values->arrays.xml file which contains two arrays, one for
+    <!-- Done(2) Add string values for the list preference -->
+    <!-- Label for the color list preference -->
+    <string name="pref_color_list_label">Shape color</string>
+    <!-- Key name for storing list preferences in SharedPreferences -->
+    <string name="pref_color_list_key" translatable="false">color</string>
+
+    <!-- Done(3) Add a res->values->arrays.xml file which contains two arrays, one for
         labels and one for values. The arrays should contain strings found in this file-->
+
+    <!-- Label in SharedPreferences for red color option -->
+    <string name="pref_color_red_label">Red</string>
+
+    <!-- Label in SharedPreferences for blue color option -->
+    <string name="pref_color_blue_label">Blue</string>
+
+    <!-- Label in SharedPreferences for green color option -->
+    <string name="pref_color_green_label">Green</string>
 
     <!-- Value in SharedPreferences for red color option -->
     <string name="pref_color_red_value" translatable="false">red</string>
