--- a/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/values/strings.xml
@@ -22,6 +22,12 @@
     <!-- Key name for storing treble in SharedPreferences -->
     <string name="pref_show_treble_key" translatable="false">show_treble</string>
 
+    <!-- Label for the size editBox preference -->
+    <string name="pref_edit_size_label">Shape size</string>
+    <!-- Key name for storing size from editBox in SharedPreferences -->
+    <string name="pref_edit_size_key" translatable="false">size</string>
+    <string name="pref_edit_size_default_value" translatable="false">1</string>
+
     <!-- Summary for Checkboxes -->
     <string name="pref_show_true">Shown</string>
     <string name="pref_show_false">Hidden</string>
